sandbox/output
StringCalculatorTest.java:33: error: cannot find symbol
        StringCalculatorParser parserWithCustomizedDelimiter = 
        ^
  symbol:   class StringCalculatorParser
  location: class StringCalculatorTest
StringCalculatorTest.java:34: error: cannot find symbol
            new ParserWithCustomizedDelimiter();
                ^
  symbol:   class ParserWithCustomizedDelimiter
  location: class StringCalculatorTest
2 errors
